--- a/1_dev_modeles_et.ipynb
+++ b/1_dev_modeles_et.ipynb
@@ -30,7 +30,7 @@
     "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import pandas as pd\n",
-    "from helping_functions import infer_column_types, specificity_score, generate_performance_figure, identify_best_param\n",
+    "from helping_functions_et import infer_column_types, specificity_score, generate_performance_figure, identify_best_param\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.impute import SimpleImputer, KNNImputer\n",
